# p4p

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  TODO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.example.yaml  lsl_api.cfg  pyproject.toml
backend/rules/: clear-fog-stressed.yaml  clear_fog_stressed.yaml  dim_lights_overload.yaml  dim_slow_response.yaml  fog_idle.yaml  increase_fog_bored.yaml  restore_lights_calm.yaml
backend/tests/: test_api_rules.py  test_bridge.py  test_contracts.py  test_core.py  test_degradation_integration.py  test_e2e_smoke.py  test_engine.py  test_ingestion.py  test_livekit.py  test_multistream.py  test_outbound.py  test_placeholder.py  test_recording.py  test_signaling.py
backend/vcore/: app.py
backend/vcore/api/: livekit.py  rules.py  sessions.py
backend/vcore/bridge/: signaling.py  ws.py
backend/vcore/core/: config.py  eventbus.py  models.py  schema.py
backend/vcore/engine/: degradation.py  evaluator.py  registry.py
backend/vcore/ingestion/: base.py  lsl_source.py  replay_source.py
backend/vcore/outbound/: base.py  ws_sink.py  zmq_sink.py
backend/vcore/recording/: livekit_recorder.py  recorder.py  sqlite_store.py  video_store.py  xdf_reader.py  xdf_writer.py
contracts/: VERSIONING.md  action_request.schema.json  object_status_manifest.schema.json  rule_grammar.schema.json  signal_schema.schema.json  status_request.schema.json  unity_behaviour.schema.json  vr_context.schema.json
docs/: HOW_IT_WORKS.md  LIVEKIT_SETUP.md
frontend/: Dockerfile  eslint.config.js  gen-types.mjs  index.html  (+5 more)
(+95 files in other folders)
