[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcore"
version = "0.1.0"
description = "V-CORE — VR Cognitive-state Observation, Rules & Environment middleware"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pylsl>=1.16",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "pyxdf>=1.16",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx2",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jsonschema",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vcore*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
